--- a/.env
+++ b/.env
@@ -14,14 +14,14 @@
 # ENVIRONMENT
 #--------------------------------------------------------------------
 
-CI_ENVIRONMENT = development
-# CI_ENVIRONMENT = production
+# CI_ENVIRONMENT = development
+CI_ENVIRONMENT = production
 
 #--------------------------------------------------------------------
 # APP
 #--------------------------------------------------------------------
 
-app.baseURL = 'http://apka.instaqram.pl/' #<- slash is important
+app.baseURL = 'http://student.ekipa.pro/' #<- slash is important
 # If you have trouble with `.`, you could also use `_`.
 # app_baseURL = ''
 # app.forceGlobalSecureRequests = false
@@ -31,18 +31,11 @@ app.baseURL = 'http://apka.instaqram.pl/' #<- slash is important
 # DATABASE
 #--------------------------------------------------------------------
 
-database.default.hostname = 
+database.default.hostname = localhost
 database.default.database = students_house_db_dev
-database.default.username = codeigniter
+database.default.username = root
 database.default.password = 
 database.default.DBDriver = MySQLi
-
-# database.default.hostname = 
-# database.default.database = students_house_db_prod
-# database.default.username = codeigniter
-# database.default.password = 
-# database.default.DBDriver = MySQLi
-
 # database.default.DBPrefix =
 # database.default.port = 3306
 
