--- a/.env
+++ b/.env
@@ -31,13 +31,25 @@ app.baseURL = 'http://student.ekipa.pro/' #<- slash is important
 # DATABASE
 #--------------------------------------------------------------------
 
+# database.default.hostname = 10.57.32.3
+# database.default.database = students_house_db_dev
+# database.default.username = codeigniter
+# database.default.password = OG9Ngc+mS2PuK23
+# database.default.DBDriver = MySQLi
 database.default.hostname = localhost
 database.default.database = students_house_db_dev
 database.default.username = root
-database.default.password = 
+database.default.password = Linked6-Pacify-Encircle
 database.default.DBDriver = MySQLi
 # database.default.DBPrefix =
 # database.default.port = 3306
+
+# database.default.hostname = 10.57.32.5
+# database.default.database = students_house_db_prod
+# database.default.username = codeigniter
+# database.default.password = a+SWN8*23xc565mtD
+# database.default.DBDriver = MySQLi
+
 
 # database.tests.hostname = localhost
 # database.tests.database = ci4_test
