--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ CI_ENVIRONMENT = development
 # APP
 #--------------------------------------------------------------------
 
-app.baseURL = 'http://apka.instaqram.pl/' #<- slash is important
+app.baseURL = 'http://student.ekipa.pro/' #<- slash is important
 # If you have trouble with `.`, you could also use `_`.
 # app_baseURL = ''
 # app.forceGlobalSecureRequests = false
@@ -31,20 +31,25 @@ app.baseURL = 'http://apka.instaqram.pl/' #<- slash is important
 # DATABASE
 #--------------------------------------------------------------------
 
-database.default.hostname = 
-database.default.database = students_house_db_dev
-database.default.username = codeigniter
-database.default.password = 
-database.default.DBDriver = MySQLi
-
-# database.default.hostname = 
-# database.default.database = students_house_db_prod
+# database.default.hostname = 10.57.32.3
+# database.default.database = students_house_db_dev
 # database.default.username = codeigniter
-# database.default.password = 
+# database.default.password = OG9Ngc+mS2PuK23
 # database.default.DBDriver = MySQLi
-
+database.default.hostname = localhost
+database.default.database = students_house_db_dev
+database.default.username = root
+database.default.password = Linked6-Pacify-Encircle
+database.default.DBDriver = MySQLi
 # database.default.DBPrefix =
 # database.default.port = 3306
+
+# database.default.hostname = 10.57.32.5
+# database.default.database = students_house_db_prod
+# database.default.username = codeigniter
+# database.default.password = a+SWN8*23xc565mtD
+# database.default.DBDriver = MySQLi
+
 
 # database.tests.hostname = localhost
 # database.tests.database = ci4_test
